--- a/index.css
+++ b/index.css
@@ -77,6 +77,7 @@ body {
     background: #55606D;
     color: #ffffff;
     font-size: 1.5em;
+    max-width: 250px;
     text-align: left;
     border-radius: 10px;
     padding: 10px 15px;
